--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,5 +37,9 @@
 		"svelte": "^5.0.0",
 		"typescript": "^5.3.2",
 		"vite": "^5.0.11"
+	},
+	"dependencies": {
+		"axios": "^1.7.8",
+		"svelte-routing": "^2.13.0"
 	}
 }
